<resources>
    <string name="app_name">Cotrav-Admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_manage">Utilities</string>
    <string name="menu_setting">About Us</string>
    <string name="menu_support">Support</string>
    <string name="menu_about">Logout</string>
    <string name="places_api_key">AIzaSyBnkMgcMCVIZR3VJStLMa8Xtv_taxVkcrw</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
