<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            style="@style/NormalBlueText"

            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/user"
            style="@style/NormalBlueText"

            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/administration"
            style="@style/NormalBlueText"

            android:title="@string/menu_manage" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/information"
            style="@style/NormalBlueText"

            android:title="@string/menu_setting" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/contact_us_icon"
                style="@style/NormalBlueText"

                android:title="@string/menu_support" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/tools_setting"
                style="@style/NormalBlueText"

                android:title="@string/menu_about" />
        </menu>
    </item>
</menu>
