<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cotrav.cotrav_admin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.cotrav.cotrav_admin.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.cotrav.cotrav_admin.ui.utilities.ManagementFragment"
        android:label="@string/menu_manage"
        tools:layout="@layout/fragment_management" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.cotrav.cotrav_admin.ui.setttings.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.cotrav.cotrav_admin.ui.support.SupportFragment"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_support" />

  <!--  <fragment
        android:id="@+id/nav_send"
        android:name="com.cotrav.cotrav_admin.ui.about_us.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />-->
</navigation>